# agentic_ai

./: .env  .gitignore  README.md  generate_inmoment_once.py  pyproject.toml  run_inmoment_stream.py
agentic_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data/augmented/: inmoment_surveys.json  inmoment_surveys.jsonl  random_comments.json
data/enriched/: synergy_ai_enriched.jsonl  synergy_enriched.jsonl
data/escalated/: synergy_escalated.jsonl
data/extracted/: synergy_extracted.jsonl  synergy_inmoment_extracted.json
data/processed/: synergy_inmoment_processed.json
data/raw/: synergy_fullstory.json  synergy_inmoment.json
ingestion/: config.py  id_state.py  pipeline.py
ingestion/generators/: base.py  llm_backed.py  structured.py
ingestion/llm/: inmoment_agent.py
ingestion/providers/: azure.py  base.py  mock.py
ingestion/schemas/: registry.py
ingestion/sinks/: jsonl.py
ingestion/validators/: pydantic_validator.py
notebooks/: data_explorer.ipynb  langchain_developer.ipynb
src/: comments_to_jsonl.py  data_api.py  data_enricher.py  data_explorer.ipynb  data_extractor.py  data_generator.py  orchestrator.py  pseudo_api.py
src/agents/: .env  agent_creator.py  agent_tester.py  auth_test.py  data_retrieval_agent.py  escalation_agent.py  invoke_agents.py  orchestrator.py  priority_agent.py  recommendation_agent.py  sentiment_agent.py  summary_agent.py
src/api/: data_api.py
src/config/: fields_to_extract.json  paths.py
src/extractors/: extract_relevant_fields.py  fullstory_extractor.py  inmoment_extractor.py
state/: inmoment_id_state.json
(+21 files in other folders)
